--- a/MasterM tries/changecolors.html
+++ b/MasterM tries/changecolors.html
@@ -1,47 +1,58 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="changecolor.css">
   <title></title>
 </head>
+
 <body>
 
-    <div class="circle" id="1"></div>
-    <div class="circle" id="2"></div>
-    <div class="circle" id="3"></div>
-    <div class="circle" id="4"></div>
+  <div class="circle" id="1"></div>
+  <div class="circle" id="2"></div>
+  <div class="circle" id="3"></div>
+  <div class="circle" id="4"></div>
 
-    <div class="new-line">
+  <div class="new-line">
 
-      <div class="circle" id="5"></div>
-      <div class="circle" id="6"></div>
-      <div class="circle" id="7"></div>
-      <div class="circle" id="8"></div>
-      <div class="circle-small" id="105"></div>
-      <div class="circle-small" id="106"></div>
-      <div class="circle-small" id="107"></div>
-      <div class="circle-small" id="108"></div>
-      <button class="buttonCheck" type="button" id="checkColorButton" onclick="checkPlayerColors()">OK</button>
-    </div>
+    <div class="circle" id="5"></div>
+    <div class="circle" id="6"></div>
+    <div class="circle" id="7"></div>
+    <div class="circle" id="8"></div>
+    <div class="circle-small" id="105"></div>
+    <div class="circle-small" id="106"></div>
+    <div class="circle-small" id="107"></div>
+    <div class="circle-small" id="108"></div>
+    <button class="buttonCheck" type="button" id="checkColorButton" onclick="checkPlayerColors()">OK</button>
+  </div>
 
-    <div class="new-line">
+  <div class="new-line">
 
-      <div class="circle" id="9"></div>
-      <div class="circle" id="10"></div>
-      <div class="circle" id="11"></div>
-      <div class="circle" id="12"></div>
-      <div class="circle-small" id="109"></div>
-      <div class="circle-small" id="110"></div>
-      <div class="circle-small" id="111"></div>
-      <div class="circle-small" id="112"></div>
-      <button class="buttonCheck" type="button" id="checkColorButton" onclick="checkPlayerColors()">OK</button>
-    </div>
+    <div class="circle" id="9"></div>
+    <div class="circle" id="10"></div>
+    <div class="circle" id="11"></div>
+    <div class="circle" id="12"></div>
+    <div class="circle-small" id="109"></div>
+    <div class="circle-small" id="110"></div>
+    <div class="circle-small" id="111"></div>
+    <div class="circle-small" id="112"></div>
+    <button class="buttonCheck" type="button" id="checkColorButton" value="yellow" onclick="checkPlayerColors()">OK</button>
+  </div>
 
   <div class="new-line">
     <button class="button" type="button" id="thinkColorButton" onclick="computerColors()">véletlen színek</button>
-    <button class="button" type="button" id="playerActualColors" onclick="playerColors()">játékos színei</button>
+    <button class="button buttonPlayerColor" type="button" id="playerActualColors" onclick="playerColors(event)">játékos színei</button>
     <button class="button" type="button" onclick="deleteColors()">összes szín töröl</button>
+  </div>
+  <div class="new-line">
+    <br>
+    <button class="button buttonPlayerColor" type="button" id="red" onclick="playerColors(event)">piros</button>
+    <button class="button buttonPlayerColor" type="button" id="yellow" onclick="playerColors(event)">sárga</button>
+    <button class="button buttonPlayerColor" type="button" id="blue" onclick="playerColors(event)">kék</button>
+    <button class="button buttonPlayerColor" type="button" id="green" onclick="playerColors(event)">zöld</button>
+    <button class="button buttonPlayerColor" type="button" id="purple" onclick="playerColors(event)">lila</button>
+    <button class="button buttonPlayerColor" type="button" id="brown" onclick="playerColors(event)">barna</button>
   </div>
 
   <script src="changecolor.js"></script>
